--- a/PortfolioWebsite/appsettings.json
+++ b/PortfolioWebsite/appsettings.json
@@ -1,1 +1,21 @@
+{
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
 
+  "Credentials": {
+    "Email": {
+      //yourdomain.com
+      "Client": "mail.gramirezcoding.com",
+      //mail@yourdomain.com
+      "User": "admin@gramirezcoding.com",
+      //Password for email login
+      "Password": "C00kie*84",
+      //Recieve contact address
+      "Recipient": "ramirez.gabriel1@yahoo.com"
+    }
+  }
+}
